[tool.poetry]
name = "apiscanner"
version = "0.1.0"
description = ""
authors = ["leipan"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.1"
requests = "^2.22"
coveralls = "^1.8"

[tool.poetry.dev-dependencies]
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
